[gd_scene load_steps=8 format=3 uid="uid://tbhcslowwxtt"]

[ext_resource type="Script" path="res://scripts/body_fantasma.gd" id="1_qmby3"]
[ext_resource type="Texture2D" uid="uid://bfnikvjdpxgey" path="res://sprites/enemy/FantasmaChef/SpriteCaminando_fantasma.png" id="1_u1yqw"]

[sub_resource type="Animation" id="Animation_wn2ps"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteCaminandoFantasma:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_k8p32"]
resource_name = "caminar"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteCaminandoFantasma:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_hnkah"]
resource_name = "inactivo"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteCaminandoFantasma:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_41841"]
_data = {
"RESET": SubResource("Animation_wn2ps"),
"caminar": SubResource("Animation_k8p32"),
"inactivo": SubResource("Animation_hnkah")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m022w"]
size = Vector2(19, 27.9531)

[node name="BodyFantasma" type="CharacterBody2D"]
position = Vector2(477, 123)
collision_layer = 2
script = ExtResource("1_qmby3")

[node name="SpriteCaminandoFantasma" type="Sprite2D" parent="."]
position = Vector2(0, -2)
scale = Vector2(0.044, 0.044)
texture = ExtResource("1_u1yqw")
hframes = 5
metadata/_edit_lock_ = true

[node name="RayCast2D" type="RayCast2D" parent="SpriteCaminandoFantasma"]
position = Vector2(45.4545, 181.818)
scale = Vector2(22.6947, 21.1021)
target_position = Vector2(17.0244, 0)

[node name="RayCaer" type="RayCast2D" parent="SpriteCaminandoFantasma"]
position = Vector2(431.818, 181.818)
scale = Vector2(22.6947, 21.1021)
target_position = Vector2(0, 85.0001)

[node name="RaySaltar" type="RayCast2D" parent="SpriteCaminandoFantasma"]
position = Vector2(227.273, -500)
scale = Vector2(22.6947, 21.1021)
target_position = Vector2(24.0345, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_41841")
}
speed_scale = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -1.97656)
shape = SubResource("RectangleShape2D_m022w")
metadata/_edit_lock_ = true
